--- a/styleweb1.css
+++ b/styleweb1.css
@@ -8,19 +8,19 @@ body
 .wrap
 {
 	background: #283d24;
-	height: 200px;
+	height: 100px;
 }
 .wrap img
 {
 	float: right;
-	margin-top: 30px;
-	width: 150px;
+	/*margin-top: 30px;*/
+	width: 100px;
 }
 .wrap h1
 {
 	text-align: center;
 	color: red;
-	font-size: 60px;
+	/*font-size: 60px;*/
 }
 .wrap a
 {
@@ -32,7 +32,7 @@ body
 }
 .wrap a:hover
 {
-	color: red;
+	color: white;
 	text-decoration: underline;
 	font-size: 30px;
 }
@@ -58,6 +58,17 @@ body
 	font-size: 20px;
 	color:black;
 	text-decoration: underline;
+}
+.grid_6 img
+{
+	width:100%;
+	height:420px;
+
+}
+.grid_6 section
+{
+	height:120px;
+
 }
 .finish
 {
